--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.sky.myapplication"
-        minSdk 21
+        applicationId "com.sky.conversion"
+        minSdk 23
         targetSdk 32
         versionCode 1
         versionName "1.0"
@@ -46,16 +46,53 @@ android {
 }
 
 dependencies {
+    def lifecycle_version = "2.4.1"
+    def arch_version = "2.1.0"
+    def nav_version = "2.4.1"
+    def fragment_version = "1.4.1"
+    def espressoVersion = "3.4.0"
+    def coroutinesVersion = "1.5.2"
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
-    implementation 'androidx.activity:activity-compose:1.3.1'
+    implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1'
+    implementation 'androidx.activity:activity-compose:1.4.0'
+
+    // retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.1.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
+
+    // ViewModel
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+
+    //navigation
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+
+    //fragment
+    implementation "androidx.fragment:fragment-ktx:$fragment_version"
+
+    //constraint layout
+    implementation "androidx.constraintlayout:constraintlayout:2.1.3"
+
+    //espresso
+    implementation "androidx.test.espresso.idling:idling-concurrent:$espressoVersion"
+
     testImplementation 'junit:junit:4.13.2'
+    testImplementation "androidx.arch.core:core-testing:$arch_version"
+
+    testImplementation("org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutinesVersion") {
+        exclude group: "org.jetbrains.kotlinx", module: "kotlinx-coroutines-debug"
+    }
+
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
+
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
 }
